<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Kullanıcı adını gösteren metin -->
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <!-- Şifre değiştirme formu -->
    <EditText
        android:id="@+id/currentPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oldpass"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newpass"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changepass"
        android:layout_marginBottom="16dp"/>

    <!-- Ayırıcı çizgi -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"
        android:layout_marginBottom="16dp"/>

    <!-- Hesabı Sil butonu -->
    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteacc"
        android:backgroundTint="#FF0000"
        android:layout_marginBottom="16dp"/>

    <!-- Çıkış yap butonu -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>

</LinearLayout>
